Eliminated conversion to/from dotnet tuple for a single item (because, while ValueTuple supports a 1-tuple, the C# tuple syntax does not and it would probably surprise people more than *not* having the conversion in the JSON 1-tuple case.

--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Array.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Array.tt
@@ -221,7 +221,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonArra
         }
     }
     
-    if (IsTuple)
+    if (IsTuple && PrefixItems.Length > 1)
     { #>
 
     /// <summary>
