--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Validate.Object.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Validate.Object.tt
@@ -156,9 +156,20 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
     if (HasDependentSchemas)
     { #>
             if (__TryGetCorvusDependentSchemaValidator(property, this.HasJsonElementBacking, out PropertyValidator<<#= TypeDeclaration.DotnetTypeName #>>? dependentSchemaValidator))
-            {
-                result = result.WithLocalProperty(propertyCount);
-                result = dependentSchemaValidator(this, result, level);
+            {                
+                var dependentSchemaResult = dependentSchemaValidator(this, result.CreateChildContext(), level);
+                if (dependentSchemaResult.IsValid)
+                {
+                    result = result.MergeChildContext(dependentSchemaResult, level >= ValidationLevel.Verbose);
+                }
+                else
+                {
+                    if (level >= ValidationLevel.Verbose)
+                    {
+                        result = result.MergeResults(result.IsValid, level, dependentSchemaResult);
+                    }
+                }
+
                 if (level == ValidationLevel.Flag && !result.IsValid)
                 {
                     return result;
