--- a/Solutions/Corvus.Json.CodeGeneration.202012/Corvus.Json.CodeGeneration.Draft202012/Templates/CodeGeneratorPartial.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.202012/Corvus.Json.CodeGeneration.Draft202012/Templates/CodeGeneratorPartial.tt
@@ -1028,6 +1028,17 @@ public partial class <#= PartialClassName #>
     }
 
     /// <summary>
+    /// Gets a value indicating whether this has a dynamic reference.
+    /// </summary>
+    public bool HasDynamicRef
+    {
+        get
+        {
+            return this.TypeDeclaration.Schema().DynamicRef.IsNotUndefined() && !this.TypeDeclaration.Schema().IsNakedDynamicReference();
+        }
+    }
+
+    /// <summary>
     /// Gets the dotnet type name for the non-naked reference.
     /// </summary>
     public string RefDotnetTypeName
@@ -1035,6 +1046,18 @@ public partial class <#= PartialClassName #>
         get
         {
             TypeDeclaration td = this.Builder.GetTypeDeclarationForProperty(this.TypeDeclaration, "$ref");
+            return td.FullyQualifiedDotnetTypeName ?? string.Empty;
+        }
+    }
+
+    /// <summary>
+    /// Gets the dotnet type name for the non-naked reference.
+    /// </summary>
+    public string DynamicRefDotnetTypeName
+    {
+        get
+        {
+            TypeDeclaration td = this.Builder.GetTypeDeclarationForProperty(this.TypeDeclaration, "$dynamicRef");
             return td.FullyQualifiedDotnetTypeName ?? string.Empty;
         }
     }
