--- a/Solutions/Corvus.Json.CodeGeneration.202012/Corvus.Json.CodeGeneration.Draft202012/Templates/CodeGeneratorPartial.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.202012/Corvus.Json.CodeGeneration.Draft202012/Templates/CodeGeneratorPartial.tt
@@ -1465,6 +1465,11 @@ public partial class <#= PartialClassName #>
                     return $"{BuiltInTypes.NotAnyTypeDeclaration.Ns}.{BuiltInTypes.NotAnyTypeDeclaration.Type}";
                 }
             }
+            else if (this.TypeDeclaration.Schema().UnevaluatedItems.IsNotUndefined())
+            {
+                TypeDeclaration itemsType = this.Builder.GetTypeDeclarationForProperty(this.TypeDeclaration, "unevaluatedItems");
+                return itemsType.FullyQualifiedDotnetTypeName ?? string.Empty;
+            }
 
             return $"{BuiltInTypes.AnyTypeDeclaration.Ns}.{BuiltInTypes.AnyTypeDeclaration.Type}";
         }
