--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Array.Add.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Array.Add.tt
@@ -29,7 +29,7 @@ namespace <#= Namespace #>;
 public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
 {
     /// <inheritdoc/>
-<#  if (IsTuple)
+<#  if (IsTuple || CanEnumerateAsSpecificType)
     { #>
     <#= TypeDeclaration.DotnetTypeName #> IJsonArray<<#= TypeDeclaration.DotnetTypeName #>>.Add(in JsonAny item1)
 <#  }
@@ -44,7 +44,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
     }
 
     /// <inheritdoc/>
-<#  if (IsTuple)
+<#  if (IsTuple || CanEnumerateAsSpecificType)
     { #>
     <#= TypeDeclaration.DotnetTypeName #> IJsonArray<<#= TypeDeclaration.DotnetTypeName #>>.Add(params JsonAny[] items)
 <#  }
@@ -79,7 +79,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
     }
 
     /// <inheritdoc/>
-<#  if (IsTuple)
+<#  if (IsTuple || CanEnumerateAsSpecificType)
     { #>
     <#= TypeDeclaration.DotnetTypeName #> IJsonArray<<#= TypeDeclaration.DotnetTypeName #>>.AddRange<TItem>(IEnumerable<TItem> items)
 <#  }
@@ -99,7 +99,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
     }
 
     /// <inheritdoc/>
-<#  if (IsTuple)
+<#  if (IsTuple || CanEnumerateAsSpecificType)
     { #>
     <#= TypeDeclaration.DotnetTypeName #> IJsonArray<<#= TypeDeclaration.DotnetTypeName #>>.AddRange(IEnumerable<JsonAny> items)
 <#  }
@@ -114,7 +114,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
     }
 
     /// <inheritdoc/>
-<#  if (IsTuple)
+<#  if (IsTuple || CanEnumerateAsSpecificType)
     { #>
     <#= TypeDeclaration.DotnetTypeName #> IJsonArray<<#= TypeDeclaration.DotnetTypeName #>>.Insert(int index, in JsonAny item1)
 <#  }
@@ -141,7 +141,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
     }
 
     /// <inheritdoc/>
-<#  if (IsTuple)
+<#  if (IsTuple || CanEnumerateAsSpecificType)
     { #>
     <#= TypeDeclaration.DotnetTypeName #> IJsonArray<<#= TypeDeclaration.DotnetTypeName #>>.InsertRange<TItem>(int index, IEnumerable<TItem> items)
 <#  }
@@ -155,7 +155,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
     }
 
     /// <inheritdoc/>
-<#  if (IsTuple)
+<#  if (IsTuple || CanEnumerateAsSpecificType)
     { #>
     <#= TypeDeclaration.DotnetTypeName #> IJsonArray<<#= TypeDeclaration.DotnetTypeName #>>.InsertRange(int index, IEnumerable<JsonAny> items)
 <#  }
@@ -168,7 +168,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
     }
 
     /// <inheritdoc/>
-<#  if (IsTuple)
+<#  if (IsTuple || CanEnumerateAsSpecificType)
     { #>
     <#= TypeDeclaration.DotnetTypeName #> IJsonArray<<#= TypeDeclaration.DotnetTypeName #>>.Replace(in JsonAny oldValue, in JsonAny newValue)
 <#  }
@@ -181,7 +181,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
     }
 
     /// <inheritdoc/>
-<#  if (IsTuple)
+<#  if (IsTuple || CanEnumerateAsSpecificType)
     { #>
     <#= TypeDeclaration.DotnetTypeName #> IJsonArray<<#= TypeDeclaration.DotnetTypeName #>>.SetItem(int index, in JsonAny value)
 <#  }
@@ -192,6 +192,105 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
     {
         return new(this.GetImmutableListSetting(index, value.AsAny));
     }
+
+<#  if (CanEnumerateAsSpecificType && !IsTuple)
+    { #>
+    /// <summary>
+    /// Add an item to the array.
+    /// </summary>
+    /// <param name="item1">The item to add.</param>
+    /// <returns>An instance of the array with the item added.</returns>
+    /// <exception cref="InvalidOperationException">The value was not an array.</exception>
+    public <#= TypeDeclaration.DotnetTypeName #> Add(in <#= SingleItemsDotnetTypeName #> item1)
+    {
+        ImmutableList<JsonAny>.Builder builder = this.GetImmutableListBuilder();
+        builder.Add(item1);
+        return new(builder.ToImmutable());
+    }
+
+    /// <summary>
+    /// Add a set of items to the array.
+    /// </summary>
+    /// <param name="items">The items to add.</param>
+    /// <returns>An instance of the array with the items added.</returns>
+    /// <exception cref="InvalidOperationException">The value was not an array.</exception>
+    public <#= TypeDeclaration.DotnetTypeName #> Add(params <#= SingleItemsDotnetTypeName #>[] items)
+    {
+        ImmutableList<JsonAny>.Builder builder = this.GetImmutableListBuilder();
+
+        foreach (<#= SingleItemsDotnetTypeName #> item in items)
+        {
+            builder.Add(item.AsAny);
+        }
+
+        return new(builder.ToImmutable());
+    }
+
+    /// <summary>
+    /// Add a set of items to the array.
+    /// </summary>
+    /// <param name="items">The items to add.</param>
+    /// <returns>An instance of the array with the items added.</returns>
+    /// <exception cref="InvalidOperationException">The value was not an array.</exception>
+    public <#= TypeDeclaration.DotnetTypeName #> AddRange(IEnumerable<<#= SingleItemsDotnetTypeName #>> items)
+    {
+        ImmutableList<JsonAny>.Builder builder = this.GetImmutableListBuilder();
+        foreach (<#= SingleItemsDotnetTypeName #> item in items)
+        {
+            builder.Add(item.AsAny);
+        }
+
+        return new(builder.ToImmutable());
+    }
+
+    /// <summary>
+    /// Insert an item into the array at the given index.
+    /// </summary>
+    /// <param name="index">The index at which to add the item.</param>
+    /// <param name="item1">The item to add.</param>
+    /// <returns>An instance of the array with the item added.</returns>
+    /// <exception cref="InvalidOpeetrationException">The value was not an array.</exception>
+    public <#= TypeDeclaration.DotnetTypeName #> Insert(int index, in <#= SingleItemsDotnetTypeName #> item1)
+    {
+        return new(this.GetImmutableListWith(index, item1));
+    }
+
+    /// <summary>
+    /// Insert items into the array at the given index.
+    /// </summary>
+    /// <param name="index">The index at which to add the items.</param>
+    /// <param name="items">The items to add.</param>
+    /// <returns>An instance of the array with the items added.</returns>
+    /// <exception cref="InvalidOperationException">The value was not an array.</exception>
+    /// <exception cref="IndexOutOfRangeException">The index was outside the bounds of the array.</exception>
+    public <#= TypeDeclaration.DotnetTypeName #> InsertRange(int index, IEnumerable<<#= SingleItemsDotnetTypeName #>> items)
+    {
+        return new(this.GetImmutableListWith(index, items.Select(item => item.AsAny)));
+    }
+
+    /// <summary>
+    /// Replace the first instance of the given value with the new value, even if the items are identical.
+    /// </summary>
+    /// <param name="oldValue">The item to remove.</param>
+    /// <param name="newValue">The item to insert.</param>
+    /// <returns>An instance of the array with the item replaced.</returns>
+    /// <exception cref="InvalidOperationException">The value was not an array.</exception>
+    public <#= TypeDeclaration.DotnetTypeName #> Replace(in <#= SingleItemsDotnetTypeName #> oldValue, in <#= SingleItemsDotnetTypeName #> newValue)
+    {
+        return new(this.GetImmutableListReplacing(oldValue.AsAny, newValue.AsAny));
+    }
+
+    /// <summary>
+    /// Set the item at the given index.
+    /// </summary>
+    /// <param name="index">The index at which to set the item.</param>
+    /// <param name="value">The value to set.</param>
+    /// <returns>An instance of the array with the item set to the given value.</returns>
+    public <#= TypeDeclaration.DotnetTypeName #> SetItem(int index, in <#= SingleItemsDotnetTypeName #> value)
+    {
+        return new(this.GetImmutableListSetting(index, value.AsAny));
+    }
+<#  } #>
 }
 <# EndNesting(); #>
 
