--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Array.Remove.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Array.Remove.tt
@@ -29,7 +29,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
 {
    /// <inheritdoc/>
     [MethodImpl(MethodImplOptions.AggressiveInlining)]
-<#  if (IsTuple)
+<#  if (IsTuple || CanEnumerateAsSpecificType)
     { #>
     <#= TypeDeclaration.DotnetTypeName #> IJsonArray<<#= TypeDeclaration.DotnetTypeName #>>.Remove(in JsonAny item1)
 <#  }
@@ -40,6 +40,20 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
     {
         return new(this.GetImmutableListWithout(item1));
     }
+
+<#  if (CanEnumerateAsSpecificType)
+    { #>
+    /// <summary>
+    /// Remove the specified item from the array.
+    /// </summary>
+    /// <param name="item">The item to remove.</param>
+    /// <returns>An instance of the array with the item removed.</returns>
+    /// <exception cref="InvalidOperationException">The value was not an array.</exception>
+    public <#= TypeDeclaration.DotnetTypeName #> Remove(in <#= SingleItemsDotnetTypeName #> item)
+    {
+        return new(this.GetImmutableListWithout(item.AsAny));
+    }
+<#  } #>
 
     /// <inheritdoc/>
     [MethodImpl(MethodImplOptions.AggressiveInlining)]
