--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Array.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Array.tt
@@ -290,6 +290,16 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonArra
 <#  if (!CanEnumerateAsSpecificType && !IsTuple)
     { #>
     /// <summary>
+    /// Create an array from the span of items.
+    /// </summary>
+    /// <param name="items">The items from which to create the array.</param>
+    /// <returns>The array containing the items.</returns>
+    public static <#= TypeDeclaration.DotnetTypeName #> Create(ReadOnlySpan<JsonAny> items)
+    {
+        return new([..items]);
+    }
+
+    /// <summary>
     /// Initializes a new instance of the <see cref="<#= TypeDeclaration.DotnetTypeName #>"/> struct.
     /// </summary>
     /// <param name="value">The value from which to construct the instance.</param>
@@ -577,6 +587,16 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonArra
 <#  }
     else if (!IsTuple)
     {#>
+    /// <summary>
+    /// Create an array from the span of items.
+    /// </summary>
+    /// <param name="items">The items from which to create the array.</param>
+    /// <returns>The array containing the items.</returns>
+    public static <#= TypeDeclaration.DotnetTypeName #> Create(ReadOnlySpan<<#= SingleItemsDotnetTypeName #>> items)
+    {
+        return new([..items]);
+    }
+
     /// <summary>
     /// Initializes a new instance of the <see cref="<#= TypeDeclaration.DotnetTypeName #>"/> struct.
     /// </summary>
