Implement IReadOnlyCollection<T> for both all .NET versions.

--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Array.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Array.tt
@@ -36,7 +36,7 @@ namespace <#= Namespace #>;
 [CollectionBuilder(typeof(<#= TypeDeclaration.DotnetTypeName #>), "Create")]
 public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonArray<<#= TypeDeclaration.DotnetTypeName #>>, IReadOnlyCollection<<#= SingleItemsDotnetTypeName #>>
 #else
-public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonArray<<#= TypeDeclaration.DotnetTypeName #>>
+public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonArray<<#= TypeDeclaration.DotnetTypeName #>>, IReadOnlyCollection<<#= SingleItemsDotnetTypeName #>>
 #endif
 <#  }
     else if (!IsTuple)
@@ -45,7 +45,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonArra
 [CollectionBuilder(typeof(<#= TypeDeclaration.DotnetTypeName #>), "Create")]
 public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonArray<<#= TypeDeclaration.DotnetTypeName #>>, IReadOnlyCollection<JsonAny>
 #else
-public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonArray<<#= TypeDeclaration.DotnetTypeName #>>
+public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonArray<<#= TypeDeclaration.DotnetTypeName #>>, IReadOnlyCollection<JsonAny>
 #endif
 <#  }
     else
@@ -190,9 +190,6 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonArra
             throw new InvalidOperationException();
         }
     }
-
-    /// <inheritdoc />
-    int IReadOnlyCollection<<#= SingleItemsDotnetTypeName #>>.Count => this.GetArrayLength();
 
     /// <summary>
     /// Gets the item at the given index.
@@ -924,7 +921,6 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonArra
 
 <#  if (CanEnumerateAsSpecificType && !IsTuple)
     { #>
-#if NET8_0_OR_GREATER
     /// <inheritdoc />
     IEnumerator<<#= SingleItemsDotnetTypeName #>> IEnumerable<<#= SingleItemsDotnetTypeName #>>.GetEnumerator()
     {
@@ -936,12 +932,13 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonArra
     {
         return EnumerateArray();
     }
-#endif
+
+    /// <inheritdoc />
+    int IReadOnlyCollection<<#= SingleItemsDotnetTypeName #>>.Count => this.GetArrayLength();
 
 <#  }
     else if (!IsTuple)
     { #>
-#if NET8_0_OR_GREATER
     /// <inheritdoc />
     IEnumerator<JsonAny> IEnumerable<JsonAny>.GetEnumerator()
     {
@@ -953,7 +950,10 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonArra
     {
         return EnumerateArray();
     }
-#endif
+
+    /// <inheritdoc />
+    int IReadOnlyCollection<JsonAny>.Count => this.GetArrayLength();
+
 <#  }#>
     /// <inheritdoc/>
     public ImmutableList<JsonAny> AsImmutableList()
@@ -966,7 +966,6 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonArra
     {
         return this.GetImmutableListBuilder();
     }
-
 
     /// <inheritdoc/>
     public int GetArrayLength()
