--- a/Solutions/Corvus.Json.CodeGeneration.4/Corvus.Json.CodeGeneration.Draft4/Templates/CodeGeneratorPartial.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.4/Corvus.Json.CodeGeneration.Draft4/Templates/CodeGeneratorPartial.tt
@@ -793,7 +793,7 @@ public partial class <#= PartialClassName #>
     {
         get
         {
-            if (this.TypeDeclaration.Schema().ExclusiveMaximum.ValueKind == JsonValueKind.True)
+            if (this.TypeDeclaration.Schema().ExclusiveMaximum.ValueKind == JsonValueKind.True && this.TypeDeclaration.Schema().Maximum.IsNotUndefined())
             {
                 if (this.TypeDeclaration.Schema().Maximum.AsJsonElement.TryGetDouble(out double _))
                 {
@@ -837,15 +837,15 @@ public partial class <#= PartialClassName #>
     {
         get
         {
-            if (this.TypeDeclaration.Schema().ExclusiveMinimum.IsNotUndefined())
+            if (this.TypeDeclaration.Schema().ExclusiveMinimum.ValueKind == JsonValueKind.True && this.TypeDeclaration.Schema().Minimum.IsNotUndefined())
             {
-                if (this.TypeDeclaration.Schema().ExclusiveMinimum.AsJsonElement.TryGetDouble(out double _))
+                if (this.TypeDeclaration.Schema().Minimum.AsJsonElement.TryGetDouble(out double _))
                 {
-                    return this.TypeDeclaration.Schema().ExclusiveMinimum.AsJsonElement.GetRawText();
+                    return this.TypeDeclaration.Schema().Minimum.AsJsonElement.GetRawText();
                 }
 
                 // Fall back to a decimal
-                return $"{this.TypeDeclaration.Schema().ExclusiveMinimum.AsJsonElement.GetRawText()}M";
+                return $"{this.TypeDeclaration.Schema().Minimum.AsJsonElement.GetRawText()}M";
             }
 
             return string.Empty;
