Removed Const from draft4

--- a/Solutions/Corvus.Json.CodeGeneration.4/Corvus.Json.CodeGeneration.Draft4/Templates/CodeGeneratorPartial.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.4/Corvus.Json.CodeGeneration.Draft4/Templates/CodeGeneratorPartial.tt
@@ -245,7 +245,7 @@ public partial class <#= PartialClassName #>
     {
         get
         {
-            return this.TypeDeclaration.Schema().Const.ValueKind == JsonValueKind.String;
+            return false;
         }
     }
 
@@ -256,7 +256,7 @@ public partial class <#= PartialClassName #>
     {
         get
         {
-            return this.TypeDeclaration.Schema().Const.ValueKind == JsonValueKind.True || this.TypeDeclaration.Schema().Const.ValueKind == JsonValueKind.False;
+            return false;
         }
     }
 
@@ -267,7 +267,7 @@ public partial class <#= PartialClassName #>
     {
         get
         {
-            return this.TypeDeclaration.Schema().Const.ValueKind == JsonValueKind.Number;
+            return false;
         }
     }
 
@@ -278,7 +278,7 @@ public partial class <#= PartialClassName #>
     {
         get
         {
-            return this.TypeDeclaration.Schema().Const.ValueKind == JsonValueKind.Object;
+            return false;
         }
     }
 
@@ -289,7 +289,7 @@ public partial class <#= PartialClassName #>
     {
         get
         {
-            return this.TypeDeclaration.Schema().Const.ValueKind == JsonValueKind.Array;
+            return false;
         }
     }
 
@@ -300,7 +300,7 @@ public partial class <#= PartialClassName #>
     {
         get
         {
-            return this.TypeDeclaration.Schema().Const.ValueKind == JsonValueKind.Null;
+            return false;
         }
     }
 
@@ -311,11 +311,6 @@ public partial class <#= PartialClassName #>
     {
         get
         {
-            if (this.HasConstString)
-            {
-                return GetRawTextAsQuotedString(this.TypeDeclaration.Schema().Const);
-            }
-
             return string.Empty;
         }
     }
@@ -327,11 +322,6 @@ public partial class <#= PartialClassName #>
     {
         get
         {
-            if (this.HasConstBoolean)
-            {
-                return GetRawTextAsQuotedString(this.TypeDeclaration.Schema().Const);
-            }
-
             return string.Empty;
         }
     }
@@ -343,11 +333,6 @@ public partial class <#= PartialClassName #>
     {
         get
         {
-            if (this.HasConstNumber)
-            {
-                return GetRawTextAsQuotedString(this.TypeDeclaration.Schema().Const);
-            }
-
             return string.Empty;
         }
     }
@@ -359,11 +344,6 @@ public partial class <#= PartialClassName #>
     {
         get
         {
-            if (this.HasConstObject)
-            {
-                return GetRawTextAsQuotedString(this.TypeDeclaration.Schema().Const);
-            }
-
             return string.Empty;
         }
     }
@@ -375,11 +355,6 @@ public partial class <#= PartialClassName #>
     {
         get
         {
-            if (this.HasConstArray)
-            {
-                return GetRawTextAsQuotedString(this.TypeDeclaration.Schema().Const);
-            }
-
             return string.Empty;
         }
     }
@@ -630,7 +605,7 @@ public partial class <#= PartialClassName #>
     {
         get
         {
-            return this.TypeDeclaration.Schema().Const.IsNotUndefined();
+            return false;
         }
     }
 
@@ -2416,7 +2391,7 @@ public partial class <#= PartialClassName #>
     /// <returns><c>True</c> if the type declaration represents a const value.</returns>
     public static bool IsConst(TypeDeclaration typeDeclaration)
     {
-        return typeDeclaration.Schema().Const.IsNotUndefined();
+        return false;
     }
 
     /// <summary>
