Removed const and contains from draft4

--- a/Solutions/Corvus.Json.CodeGeneration.4/Corvus.Json.CodeGeneration.Draft4/Templates/CodeGeneratorPartial.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.4/Corvus.Json.CodeGeneration.Draft4/Templates/CodeGeneratorPartial.tt
@@ -965,7 +965,7 @@ public partial class <#= PartialClassName #>
     {
         get
         {
-            return this.TypeDeclaration.Schema().Ref.IsNotUndefined() && !this.TypeDeclaration.Schema().IsNakedReference();
+            return false;
         }
     }
 
@@ -1010,7 +1010,7 @@ public partial class <#= PartialClassName #>
     {
         get
         {
-            return this.TypeDeclaration.Schema().PropertyNames.IsNotUndefined();
+            return false;
         }
     }
 
@@ -2465,12 +2465,6 @@ public partial class <#= PartialClassName #>
             return format is string f ? [f] : [];
         }
 
-        if (typeDeclaration.Schema().Ref.IsNotUndefined() && !typeDeclaration.Schema().IsNakedReference())
-        {
-            TypeDeclaration td = this.Builder.GetTypeDeclarationForProperty(typeDeclaration, "$ref");
-            return this.GetImpliedFormats(td);
-        }
-
         if (typeDeclaration.Schema().AllOf.IsNotUndefined() && typeDeclaration.Schema().AllOf.GetArrayLength() == 1)
         {
             TypeDeclaration td = this.Builder.GetTypeDeclarationForPropertyArrayIndex(typeDeclaration, "allOf", 0);
@@ -2723,17 +2717,6 @@ public partial class <#= PartialClassName #>
                     conversions.Add(td, new Conversion(td, parent is null, isImplicitDowncast: allowsImplicitDowncast));
                     this.AddConversionsFor(td, conversions, typeDeclaration);
                 }
-            }
-        }
-
-        if (typeDeclaration.Schema().Ref.IsNotUndefined() && !typeDeclaration.Schema().IsNakedReference())
-        {
-            TypeDeclaration td = this.Builder.GetTypeDeclarationForProperty(typeDeclaration, "$ref");
-
-            if (!conversions.ContainsKey(td))
-            {
-                conversions.Add(td, new Conversion(td, parent is null, true));
-                this.AddConversionsFor(td, conversions, typeDeclaration);
             }
         }
     }
