WIP: self-bootstrapping generation for draft4

--- a/Solutions/Corvus.Json.CodeGeneration.4/Corvus.Json.CodeGeneration.Draft4/Templates/CodeGeneratorPartial.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.4/Corvus.Json.CodeGeneration.Draft4/Templates/CodeGeneratorPartial.tt
@@ -1153,7 +1153,7 @@ public partial class <#= PartialClassName #>
     {
         get
         {
-            return this.TypeDeclaration.Schema().Contains.IsNotUndefined();
+            return false;
         }
     }
 
@@ -1164,12 +1164,6 @@ public partial class <#= PartialClassName #>
     {
         get
         {
-            if (this.TypeDeclaration.Schema().Contains.IsNotUndefined())
-            {
-                TypeDeclaration typeDeclaration = this.Builder.GetTypeDeclarationForProperty(this.TypeDeclaration, "contains");
-                return typeDeclaration.FullyQualifiedDotnetTypeName!;
-            }
-
             return string.Empty;
         }
     }
