Remove uses of the IJsonString conversion to string operator.

--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.String.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.String.tt
@@ -82,7 +82,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
     {
         if (value.HasDotnetBacking && value.ValueKind == JsonValueKind.String)
         {
-            return new((string)value);
+            return new(value.GetString()!);
         }
 
         return new(value.AsJsonElement);
