--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.tt
@@ -683,11 +683,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
 
         if (value.ValueKind == JsonValueKind.String)
         {
-#if NET8_0_OR_GREATER
-            return new((string)value);
-#else
-            return new((string)value.AsString);
-#endif
+            return new(value.GetString()!);
         }
 <#  } #>
 
