--- a/Solutions/Corvus.Json.ExtendedTypes/Corvus.Json/Templates/FormattedStringType.Basics.tt
+++ b/Solutions/Corvus.Json.ExtendedTypes/Corvus.Json/Templates/FormattedStringType.Basics.tt
@@ -101,7 +101,7 @@ public readonly partial struct <#= TypeName #>
     {
         if (value.HasDotnetBacking && value.ValueKind == JsonValueKind.String)
         {
-            return new((string)value);
+            return new(value.GetString()!);
         }
 
         return new(value.AsJsonElement);
